// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Visualize Dropdown Component:  Should disable the button 1`] = `
<div
  className="btn-group flex-column"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn dropdown-toggle btn-yellow disabled"
    data-toggle="dropdown"
    disabled={true}
    id="visualize"
    onClick={[Function]}
  >
    Visualise
    <span
      className="caret"
    />
  </button>
  <ul
    className="dropdown-menu"
  >
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Web V1
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Web V2
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Web V3
        <span
          className="link-tag"
        >
          <i>
            beta
          </i>
        </span>
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Interviewer face to face
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Interviewer phone
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Paper
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Specification
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Metadata
      </a>
    </li>
  </ul>
</div>
`;

exports[`Visualize Dropdown Component:  Should display the dropdown on top 1`] = `
<div
  className="btn-group dropup flex-column-reverse"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn dropdown-toggle btn-yellow"
    data-toggle="dropdown"
    disabled={false}
    id="visualize"
    onClick={[Function]}
  >
    Visualise
    <span
      className="caret"
    />
  </button>
  <ul
    className="dropdown-menu"
  >
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Web V1
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Web V2
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Web V3
        <span
          className="link-tag"
        >
          <i>
            beta
          </i>
        </span>
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Interviewer face to face
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Interviewer phone
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Paper
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Specification
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Metadata
      </a>
    </li>
  </ul>
</div>
`;

exports[`Visualize Dropdown Component:  Should return the right HTML 1`] = `
<div
  className="btn-group flex-column"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn dropdown-toggle btn-yellow"
    data-toggle="dropdown"
    disabled={false}
    id="visualize"
    onClick={[Function]}
  >
    Visualise
    <span
      className="caret"
    />
  </button>
  <ul
    className="dropdown-menu"
  >
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Web V1
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Web V2
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Web V3
        <span
          className="link-tag"
        >
          <i>
            beta
          </i>
        </span>
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Interviewer face to face
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Interviewer phone
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Paper
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Specification
      </a>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        Metadata
      </a>
    </li>
  </ul>
</div>
`;
